css/main.css
/* main.css */

body {
    position: relative;
}

/* navbar fixed-top scroll offset */

*[id]:before {
    display: block;
    content: " ";
    margin-top: -75px;
    height: 75px;
    visibility: hidden;
}

/* Light mode */
@media (prefers-color-scheme: light) {

    nav,
    body {
        background-color: white;
        color: black;
    }
}

/* Dark mode */
@media (prefers-color-scheme: dark) {

    nav,
    body {
        background-color: black;
        color: white;
    }
    .navbar {
        background-color: #333;
        color: #dedede;
    }

}

.main {
    padding-top: 75px;
}

/*Navbar */

.navbar-emoji-picker {
    display: inline-block;
    padding: 0;
}

.navbar-emoji-picker li {
    display: inline-block;
    padding-left: 0rem !important;
    padding-right: 0rem !important;
}


.nav-link {
    display: inline-block !important;
    padding: 0.3rem 0.15rem !important;
    -webkit-filter: grayscale(100%);
    filter: grayscale(100%);
    opacity: 0.5;
}

.nav-link.active,
.nav-link.search-link {
    filter: none;
    -webkit-filter: none;
    opacity: 1;
}

.search-link {
    margin-left: 0.8rem;
}

.search-clear {
    color: #666;
}

.navbar-toggler {
    border: hidden;
    padding: 0;
}

.navbar-search {
    display: block;
    padding: 0.2rem 1rem;
}

h1.mobile-brand {
    font-size: 1.5rem;
    padding-bottom: 10px;
}

hr.cat-divider {
    margin-top: 2rem;
}

h2 {
    text-transform: uppercase;
    font-size: 1.1rem;
    letter-spacing: 0.2rem;
    color: #666;
    margin-top: 2rem;
}

ul.emoji-list {
    text-align: center;
    padding-left: 0;
}

li.emoji-item {
    list-style-type: none;
    display: inline-block;
    line-height: 100px;
    vertical-align: top;
}

.emoji-symbol {
    font-size: 3rem;
}

.emoji-description {
    line-height: 0.70rem;
    font-size: 0.76rem;
}

.emoji-tags {
    display: none;
}

.oi.oi-magnifying-glass {
    top: 4px;
}

